# Calces-Bibliotheca

./: Cargo.toml  README.md
.github/workflows/: rust-test.yml
src/: lib.rs
src/administration/: mod.rs  user_safety.rs
src/api/: mod.rs
src/api/administration/: mod.rs
src/api/authentication/: mfa.rs  mod.rs
src/api/bots/: mod.rs
src/api/channels/: channel_invites.rs  channel_permissions.rs  messaging.rs  mod.rs  voice.rs  webhooks.rs
src/api/core/: mod.rs
src/api/customisation/: mod.rs
src/api/invites/: mod.rs
src/api/misc/: mod.rs  sync.rs  web_push.rs
src/api/servers/: mod.rs
src/api/users/: direct_messaging.rs  mod.rs  user_information.rs
src/authentication/: account.rs  mod.rs  onboarding.rs  session.rs
src/bots/: mod.rs
src/channels/: channel_information.rs  groups.rs  interactions.rs  mod.rs
src/core/: mod.rs
src/customisation/: mod.rs
src/data_model/: avatar.rs  data_user_profile.rs  display_name.rs  mod.rs  user_status.rs
src/data_model/data_user_profile/: background.rs  content.rs
src/data_model/user_status/: presence.rs  user_status_text.rs
src/misc/: mod.rs
src/users/: direct_messaging.rs  mod.rs  relationships.rs  user_information.rs
tests/: create_client.rs  direct_messaging.rs  main.rs  user_information.rs
tests/tests/customisation/: emojis.rs  mod.rs
tests/tests/users/: direct_messaging.rs  mod.rs  relationships.rs  user_information.rs
