[package]
name = "calces-bibliotheca"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflag = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
